# ckanext-oai-jsonld-harvester

./: MANIFEST.in  README.md  setup.cfg  setup.py  test.ini
.github/workflows/: test.yml
ckanext/massbankharvester/: plugin.py
ckanext/massbankharvester/assets/: script.js  webassets.yml
ckanext/massbankharvester/harvester/: massbanker.py  massbankharvester.py  metadata.py  nmrXivharvester.py
ckanext/massbankharvester/tests/: test_plugin.py
