[metadata]
name = ckanext-massbankharvester
version = 0.0.1
description = to harvest metedata from massbank OAI Handler 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bhavin2897/ckanext-massbankharvester
author = Bhavin Katabathuni
author_email = bhavin.katabathuni@tib.eu
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN harvester massbank metadata

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             massbankharvester = ckanext.massbankharvester.plugin:MassbankharvesterPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/massbankharvester/i18n/ckanext-massbankharvester.pot
width = 80

[init_catalog]
domain = ckanext-massbankharvester
input_file = ckanext/massbankharvester/i18n/ckanext-massbankharvester.pot
output_dir = ckanext/massbankharvester/i18n

[update_catalog]
domain = ckanext-massbankharvester
input_file = ckanext/massbankharvester/i18n/ckanext-massbankharvester.pot
output_dir = ckanext/massbankharvester/i18n
previous = true

[compile_catalog]
domain = ckanext-massbankharvester
directory = ckanext/massbankharvester/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
